vendored_parsers/tree-sitter-ada/grammar.js
      compilation: $ => repeat(
         $.compilation_unit,
      ),

      identifier: $ =>
         /[a-zA-Z\u{80}-\u{10FFFF}][0-9a-zA-Z_\u{80}-\u{10FFFF}]*/u,
      string_literal: $ => token(/"(""|[^"])*"/),
      character_literal: $ => token(/'.'/),
      numeric_literal: $ => token(
         choice(
            /[0-9][0-9_]*(\.[0-9_]+)?([eE][+-]?[0-9_]+)?/,
            /[0-9]+#[0-9a-fA-F._-]+#([eE][+-]?[0-9_]+)?/,
         )
      ),
      relational_operator: $ => choice('=', '/=', '<', '<=', '>', '>='),
      binary_adding_operator: $ => choice('+', '-', '&'),
      multiplying_operator: $ => choice('*', '/', 'mod', 'rem'),
      tick: $ => '\'',   // But is not the start of a character_literal

      _name_not_function_call: $ => choice(           // RM 4.1
         $.identifier,
         $.gnatprep_identifier,
         $.selected_component,
         $._attribute_reference,
         $.qualified_expression,
         $.target_name,
         $.slice,
         // $.explicit_dereference, // covered by $.selected_component
         $.character_literal,
         $.string_literal, // name of an operator. However, in a number of
                           // places using a string doesn't make sense.
      ),
      _name: $ => choice(           // RM 4.1
         $._name_not_function_call,
         $.function_call,
      ),
      _name_for_component_choice: $ => choice(
         // Do not allow slice, function_call,... as opposed to what RM allows
         $.identifier,
         $.string_literal,
      ),

      selected_component: $ => prec.left(seq(   // RM 4.1.3
         field('prefix', $._name),
         seq(
            '.',
            field('selector_name', choice(
               $.identifier,
               $.character_literal,
               $.string_literal,
            )),
         ),
      )),
      target_name: $ => '@',       // RM 5.2.1
      _defining_identifier_list: $ => comma_separated_list_of($.identifier),
      _discrete_subtype_definition: $ => choice(
         $._subtype_indication,
         $.range_g,
      ),
      loop_parameter_specification: $ => seq(
         $.identifier,
         reservedWord('in'),
         optional(reservedWord('reverse')),
         $._discrete_subtype_definition,
         optional($.iterator_filter),
      ),
      _loop_parameter_subtype_indication: $ => choice(
         $._subtype_indication,
         $.access_definition,
      ),
      iterator_filter: $ => seq(
         reservedWord('when'),
         field('condition', $.expression),
      ),
      iterator_specification: $ => seq(       // ARM 5.5.2
         $.identifier,
         optional(seq(
            ':',
            $._loop_parameter_subtype_indication,
         )),
         choice(
            reservedWord('in'),
            reservedWord('of'),
         ),
         optional(reservedWord('reverse')),
         field('iterator_name', $._name),
         optional($.iterator_filter),
      ),
      qualified_expression: $ => seq(      // ARM 4.7
         field('subtype_name', $._name),
         $.tick,
         choice(
            $._aggregate,

            // In the RM grammar, this is a simple '(expression)', but
            // conditional expression would require a second nested pair of
            // parenthesis, whereas this is not mandatory anymore in the
            // text of the RM.
            //     seq('(', $.expression, ')'),
            $._parenthesized_expression,
         ),
      ),
      compilation_unit: $ => choice(
         $.with_clause,
         seq(
            optional(reservedWord('private')),
            $._declarative_item,
         ),
         $._statement,
         $.subunit,
         $.entry_declaration,
      ),
      _declarative_item: $ => choice(
         $._basic_declarative_item,
         $._proper_body,
         $.body_stub,
      ),
      package_declaration: $ => seq(
         $._package_specification,
         ';',
      ),
      _package_specification: $ => seq(
         reservedWord('package'),
         field('name', $._name),
         optional($.aspect_specification),
         reservedWord('is'),
         repeat($._basic_declarative_item_pragma),
         optional(seq(
             reservedWord('private'),
             repeat($._basic_declarative_item_pragma),
         )),
         reservedWord('end'),
         field('endname', optional($._name)),
      ),
      subprogram_body: $ => seq(      // ARM 6.3
         optional($.overriding_indicator),
         $._subprogram_specification,
         optional($.aspect_specification),
         reservedWord('is'),
         optional($.non_empty_declarative_part),
         reservedWord('begin'),
         $.handled_sequence_of_statements,
         reservedWord('end'),
         optional(field('endname', $._name)),
         ';'
      ),
      _subtype_indication: $ => seq(        // ARM 3.2.2
         optional($.null_exclusion),
         field('subtype_mark', $._name_not_function_call),
         optional($._constraint),
      ),
      range_g: $ => choice(                         //  ARM 3.5
         field('range_attribute_reference', seq(    //  ARM 4.1.4
            field('prefix', $._name),
            $.tick,
            $.range_attribute_designator,
         )),
         seq(
            $._simple_expression,
            '..',
            $._simple_expression,
         ),
      ),
      range_attribute_designator: $ => seq(
         reservedWord('range'),
         optional(seq(
            '(',
            $.expression,
            ')',
         )),
      ),
      range_constraint: $ => seq(
         reservedWord('range'),
         $.range_g,
      ),
      expression: $ => choice(
         list_of(seq(reservedWord('and'), optional(reservedWord('then'))),
                 $._relation),
         list_of(seq(reservedWord('or'), optional(reservedWord('else'))),
                 $._relation),
         list_of(reservedWord('xor'), $._relation),
      ),
      _relation: $ => choice(                            // RM 4.4
         seq(
            $._simple_expression,
            optional(seq(
               $.relational_operator,
               $._simple_expression,
            )),
         ),
         $.relation_membership,
         $.raise_expression,                           // Added Ada 20x
      ),
      _simple_expression: $ => seq(
         optional($.unary_adding_operator),
         $.term,
         repeat(seq(
            $.binary_adding_operator,
            $.term,
         )),
      ),

      // Keep term as an explicit node in the tree to resolve priorities of
      // operations.
      term: $ => seq(
         $._factor,
         repeat(seq(
            $.multiplying_operator,
            $._factor,
         )),
      ),
      _factor: $ => choice(     // ARM 4.4
         $._primary,
         $.factor_power,
         $.factor_abs,
         $.factor_not,
      ),
      _parenthesized_expression: $ => seq(
         '(',
         choice(
            $.expression,
            $._conditional_expression,
            $.quantified_expression,
            $.declare_expression,
         ),
         ')',
      ),

      // _primary might resolve as an '_aggregate', which might resolve as
      // a 'position_array_aggregate', so an expression like
      //     case ( .. )
      // is ambiguous. So we raise the priority here.
      allocator: $ => seq(
         reservedWord('new'),
         optional($.subpool_specification),
         $._subtype_indication_paren_constraint,
      ),
      _subtype_indication_paren_constraint: $ => seq(
         optional($.null_exclusion),
         $._name,
         optional($.index_constraint),
      ),
      subpool_specification: $ => seq(
         '(',
         field('subpool_handle_name', $._name),
         ')',
      ),
      actual_parameter_part: $ => seq(    // ARM 6.4
         '(',
         choice(
            comma_separated_list_of($.parameter_association),

            // Those are not in the ARM, but added here for generic
            // instantiations, which get the actual parameter part via $._name
            // and its $.function_call
            // ????
            $._conditional_expression,
            $.quantified_expression,
            $.declare_expression,
         ),
         ')',
      ),

      // RM 6.4, but this one also handles parameters for generic
      // instantiations.
      parameter_association: $ => choice(
         seq(
            $.component_choice_list,
            '=>',
            choice(
               $.expression,
               '<>',
            ),
         ),
         $.expression,
         '<>',
       ),
      _conditional_expression: $ => choice(
         $.if_expression,
         $.case_expression,
      ),
      _conditional_quantified_expression: $ => choice(
         $.if_expression,
         $.case_expression,
         $.quantified_expression,
      ),
      component_choice_list: $ => choice(                 // RM 4.3.1
         reservedWord('others'),
         list_of('|', $._name_for_component_choice),
      ),
      _aggregate: $ => choice(                            // RM 4.3
         $.record_aggregate,
         $.extension_aggregate,
         $._array_aggregate,
         $._delta_aggregate,                              // Ada 20x
      ),
      record_aggregate: $ => seq(
         '(',
         $.record_component_association_list,
         ')',
      ),

      // Either:
      // *  'null record'
      // *  expression, {expression_or_named}
      //    expression_or_named:: expression | choice => expression
      // *  named {, named}
      record_component_association_list: $ => choice(    // RM 4.3.1
         seq(
            reservedWord('null'),
            reservedWord('record'),
         ),
         seq(
            $.expression,
            ',',   //  Need at least two components with positional
            comma_separated_list_of(choice(
               $.expression,
               $._named_record_component_association,
            )),
         ),
         comma_separated_list_of($._named_record_component_association),
      ),

      // We have modified record_component_association_list to accept a
      // minimum of two positional expressions. However, in extension
      // aggregates it is valid to have just "(parent with value)"
      _named_record_component_association: $ => seq(  // adapted from ARM 4.3.1
         $.component_choice_list,
         '=>',
         choice(
            $.expression,
            '<>',
         ),
      ),
      index_constraint: $ => seq(    // RM 3.6.1
         '(',
         comma_separated_list_of($._discrete_range),
         ')',
      ),
      full_type_declaration: $ => choice(
         seq(
            reservedWord('type'),
            $.identifier,
            optional($.known_discriminant_part),
            reservedWord('is'),
            $._type_definition,
            optional($.aspect_specification),
            ';',
         ),
         $.task_type_declaration,
         $.protected_type_declaration,
      ),
      _type_definition: $ => choice(
         $.enumeration_type_definition,
         $._integer_type_definition,
         $._real_type_definition,
         $.array_type_definition,
         $.record_type_definition,
         $._access_type_definition,
         $.derived_type_definition,
         $.interface_type_definition,
      ),
      _discrete_subtype_definition: $ => choice(
         $._subtype_indication,
         $.range_g,
      ),
      _discrete_range: $ => choice(  //  3.6.1 == _discrete_subtype_definition
         $._subtype_indication,
         $.range_g,
      ),
      enumeration_type_definition: $ => seq(
         '(',
         $._enumeration_literal_list,
         ')',
      ),
      _enumeration_literal_list: $ =>
         comma_separated_list_of($._enumeration_literal_specification),
      modular_type_definition: $ => seq(
         reservedWord('mod'),
         $.expression,
      ),
      real_range_specification: $ => seq(
         reservedWord('range'),
         $._simple_expression,
         '..',
         $._simple_expression,
      ),
      decimal_fixed_point_definition: $ => seq(
         reservedWord('delta'),
         $.expression,
         reservedWord('digits'),
         $.expression,
         optional($.real_range_specification),
      ),
      ordinary_fixed_point_definition: $ => seq(
         reservedWord('delta'),
         $.expression,
         $.real_range_specification,
      ),
      signed_integer_type_definition: $ => seq(
         reservedWord('range'),
         $._simple_expression,
         '..',
         $._simple_expression,
      ),
      derived_type_definition: $ => seq(
         optional(reservedWord('abstract')),
         optional(reservedWord('limited')),
         reservedWord('new'),
         $._subtype_indication,
         optional(seq(
            optional(seq(
               reservedWord('and'),
               $._interface_list,
            )),
            $.record_extension_part,
         )),
      ),
      _interface_list: $ =>
         list_of(reservedWord('and'), $._name),
      _array_aggregate: $ => choice(
         $.positional_array_aggregate,
         $.null_array_aggregate,
         $.named_array_aggregate,
      ),
      named_array_aggregate: $ => choice(
         seq('(', $._array_component_association_list, ')'),
         seq('[', $._array_component_association_list, ']'),
      ),
      _array_component_association_list: $ =>
         comma_separated_list_of($.array_component_association),
      array_component_association: $ => choice(    // ARM 4.3.3
         seq(
            $.discrete_choice_list,
            '=>',
            choice(
               $.expression,
               '<>',
            ),
         ),
         $.iterated_element_association,
      ),
      discrete_choice_list: $ => list_of('|', $.discrete_choice),
      discrete_choice: $ => choice(    // ARM 3.8.1
         $.expression,
         $._subtype_indication,
         $.range_g,
         reservedWord('others'),
      ),
      aspect_association: $ => seq(
         $._aspect_mark,
         optional(seq(
            '=>',
            $._aspect_definition,
         )),
      ),
      _aspect_definition: $ => choice(
         $.expression,
         $.global_aspect_definition,
      ),
      _aspect_mark: $ => seq(   // ARM 13.1.1
         $.identifier,
         optional(seq(
            $.tick,
            reservedWord('Class'),
         )),
      ),
      aspect_mark_list: $ => comma_separated_list_of($.aspect_association),
      aspect_specification: $ => seq(
         reservedWord('with'),
         $.aspect_mark_list,
      ),
      _assign_value: $ => seq(
         ':=',
         $.expression,
      ),
      _declarative_item_pragma: $ => choice(
         $._declarative_item,
         $.pragma_g,
         $.gnatprep_declarative_if_statement,
      ),

      // Although it doesn't add any new character, we keep this rule as an
      // expplicit node in the tree for the sake of queries
      non_empty_declarative_part: $ => repeat1(
         $._declarative_item_pragma,
      ),
      enumeration_aggregate: $ => $._array_aggregate,  //  ??? inline  ARM 13.4
      enumeration_representation_clause: $ => seq(    // ARM 13.4
         reservedWord('for'),
         field('local_name', $._name),
         reservedWord('use'),
         $.enumeration_aggregate,
         ';',
      ),
      exception_choice_list: $ => list_of('|', $.exception_choice),
      exception_choice: $ => choice(    // ARM 11.2
         field('exception_name', $._name),
         reservedWord('others'),
      ),
      exception_handler: $ => seq(  // RM 11.2
         reservedWord('when'),
         optional(seq(
            $.choice_parameter_specification,
            ':',
         )),
         $.exception_choice_list,
         '=>',
         $._sequence_of_statements,
      ),
